// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modal mount 1`] = `
<div id="modal-id___BV_modal_outer_" style="position: absolute; z-index: 1040;">
	<div id="modal-id" role="dialog" aria-hidden="true" aria-labelledby="modal-id___BV_modal_title_" aria-describedby="modal-id___BV_modal_body_" class="modal fade SharpModal" style="display: none;">
		<div class="modal-dialog modal-md">
			<!---->
			<div id="modal-id___BV_modal_content_" tabindex="-1" class="modal-content">
				<header id="modal-id___BV_modal_header_" class="modal-header">
					<h5 id="modal-id___BV_modal_title_" class="modal-title">title</h5>
					<button type="button" aria-label="Close" class="close">×</button>
				</header>
				<div id="modal-id___BV_modal_body_" class="modal-body"></div>
				<footer id="modal-id___BV_modal_footer_" class="modal-footer">
					<div class="w-100">
						<div class="row">
							<div class="col"></div>
							<div class="col-auto align-self-end">
								<div class="row gx-2">
									<div class="col-auto">
										<button class="btn btn-outline-primary">
											cancel title
										</button>
									</div>
									<div class="col-auto">
										<button class="btn position-relative btn-primary" style="min-width: 70px;">
											<span class="">
												ok title
											</span>
											<!---->
										</button>
									</div>
								</div>
							</div>
						</div>
					</div>
				</footer>
			</div>
			<!---->
		</div>
	</div>
	<!---->
</div>
`;

exports[`modal mount ok only 1`] = `
<div id="mocked___BV_modal_outer_" style="position: absolute; z-index: 1040;">
	<div id="mocked" role="dialog" aria-hidden="true" aria-describedby="mocked___BV_modal_body_" class="modal fade SharpModal" style="display: none;">
		<div class="modal-dialog modal-md">
			<!---->
			<div id="mocked___BV_modal_content_" tabindex="-1" class="modal-content">
				<header id="mocked___BV_modal_header_" class="modal-header pb-0">
					<h5 id="mocked___BV_modal_title_" class="modal-title"></h5>
					<button type="button" aria-label="Close" class="close">×</button>
				</header>
				<div id="mocked___BV_modal_body_" class="modal-body"></div>
				<footer id="mocked___BV_modal_footer_" class="modal-footer">
					<div class="w-100">
						<div class="row">
							<div class="col"></div>
							<div class="col-auto align-self-end">
								<div class="row gx-2">
									<!---->
									<div class="col-auto">
										<button class="btn position-relative btn-lg btn-primary" style="min-width: 70px;">
											<span class="">
												{{ modals.ok_button }}
											</span>
											<!---->
										</button>
									</div>
								</div>
							</div>
						</div>
					</div>
				</footer>
			</div>
			<!---->
		</div>
	</div>
	<!---->
</div>
`;

exports[`modal mount visible 1`] = `
<div id="mocked___BV_modal_outer_" style="position: absolute; z-index: 1040;">
	<div id="mocked" role="dialog" aria-describedby="mocked___BV_modal_body_" class="modal fade SharpModal" style="" aria-modal="true">
		<div class="modal-dialog modal-md">
			<!---->
			<div id="mocked___BV_modal_content_" tabindex="-1" class="modal-content">
				<header id="mocked___BV_modal_header_" class="modal-header pb-0">
					<h5 id="mocked___BV_modal_title_" class="modal-title"></h5>
					<button type="button" aria-label="Close" class="close">×</button>
				</header>
				<div id="mocked___BV_modal_body_" class="modal-body"></div>
				<footer id="mocked___BV_modal_footer_" class="modal-footer">
					<div class="w-100">
						<div class="row">
							<div class="col"></div>
							<div class="col-auto align-self-end">
								<div class="row gx-2">
									<div class="col-auto">
										<button class="btn btn-outline-primary">
											{{ modals.cancel_button }}
										</button>
									</div>
									<div class="col-auto">
										<button class="btn position-relative btn-primary" style="min-width: 70px;">
											<span class="">
												{{ modals.ok_button }}
											</span>
											<!---->
										</button>
									</div>
								</div>
							</div>
						</div>
					</div>
				</footer>
			</div>
			<!---->
		</div>
	</div>
	<div id="mocked___BV_modal_backdrop_" class="modal-backdrop"></div>
</div>
`;

exports[`modal mount with modifiers classes 1`] = `
<div id="mocked___BV_modal_outer_" style="position: absolute; z-index: 1040;">
	<div id="mocked" role="dialog" aria-hidden="true" aria-describedby="mocked___BV_modal_body_" class="modal fade SharpModal" style="display: none;">
		<div class="modal-dialog modal-md">
			<!---->
			<div id="mocked___BV_modal_content_" tabindex="-1" class="modal-content">
				<header id="mocked___BV_modal_header_" class="modal-header pb-0">
					<h5 id="mocked___BV_modal_title_" class="modal-title text-danger"></h5>
					<button type="button" aria-label="Close" class="close">×</button>
				</header>
				<div id="mocked___BV_modal_body_" class="modal-body"></div>
				<footer id="mocked___BV_modal_footer_" class="modal-footer">
					<div class="w-100">
						<div class="row">
							<div class="col"></div>
							<div class="col-auto align-self-end">
								<div class="row gx-2">
									<div class="col-auto">
										<button class="btn btn-outline-primary">
											{{ modals.cancel_button }}
										</button>
									</div>
									<div class="col-auto">
										<button class="btn position-relative btn-primary" style="min-width: 70px;">
											<span class="">
												{{ modals.ok_button }}
											</span>
											<!---->
										</button>
									</div>
								</div>
							</div>
						</div>
					</div>
				</footer>
			</div>
			<!---->
		</div>
	</div>
	<!---->
</div>
`;
